--- a/FRONTEND/photoDrop/index.html
+++ b/FRONTEND/photoDrop/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" sizes="180x180" href="/favicon.png">
+        <link rel="icon" sizes="180x180" href="/favicon.png" />
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
